Mengubah all-clear dan zero-btn

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,9 @@ button{
   width:25%;
   outline:none;
 }
+.all-clear, .zero-btn{
+  width:50%;
+}
 .operator, .equal-sign{
   background-color:orange;
 }
